# -MIET

./: CMakeLists.txt  hw_1_game_of_thrones.ipynb  iomanip.hpp  main.cpp
lab10/: CMakeLists.txt
lab10/include/: strided_range.hpp
lab10/tests/: strided_range.cpp
lab8/: CMakeLists.txt
lab8/include/: json.hpp
lab8/tests/: tests_json_parser_.cpp
lab9/: CMakeLists.txt
lab9/include/: type_map.hpp
lab9/tests/: type_map.cpp
week_01_ml_intro/Homework/: hw_1_game_of_thrones.ipynb
